--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap');
 
 body {
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #26272b;
   color: #fff;
 }
