css for coin page

--- a/src/components/coins/coins.css
+++ b/src/components/coins/coins.css
@@ -24,3 +24,32 @@
         display: none;
     }
 }
+
+.coin-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #26272b;
+    box-shadow: 0px 0px 12px #18191b;
+    border-radius: 8px;
+    margin: 2rem 1rem;
+    padding: 0.7rem 1rem;
+    font-weight: 700;
+}
+
+.coin-row:hover {
+    transform: scale(1.04);
+    transition: 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.img-symbol{
+    display: flex;
+    align-items: center;
+}
+
+img {
+    height: 40px;
+    margin-right: 8px;
+    width: auto;
+}
