browser route page in progress

--- a/src/components/coins/coins.css
+++ b/src/components/coins/coins.css
@@ -27,7 +27,7 @@
 
 .coin-row {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     background-color: #26272b;
     box-shadow: 0px 0px 12px #18191b;
